bdr.BDR2.scala.error
Compilation error:
BDR2:14: error: not found: value backdraw
    case "Z" => backdraw()
                ^BDR2:15: error: not found: value backdraw
    case "Y" => backdraw(); backdraw()
                ^BDR2:15: error: not found: value backdraw
    case "Y" => backdraw(); backdraw()
                            ^BDR2:16: error: not found: value backdraw
    case "X" => backdraw(); backdraw(); backdraw()
                ^BDR2:16: error: not found: value backdraw
    case "X" => backdraw(); backdraw(); backdraw()
                            ^BDR2:16: error: not found: value backdraw
    case "X" => backdraw(); backdraw(); backdraw()
                                        ^BDR2:17: error: not found: value backdraw
    case "W" => backdraw(); backdraw(); backdraw(); backdraw()
                ^BDR2:17: error: not found: value backdraw
    case "W" => backdraw(); backdraw(); backdraw(); backdraw()
                            ^BDR2:17: error: not found: value backdraw
    case "W" => backdraw(); backdraw(); backdraw(); backdraw()
                                        ^BDR2:17: error: not found: value backdraw
    case "W" => backdraw(); backdraw(); backdraw(); backdraw()
                                                    ^BDR2:18: error: not found: value backdraw
    case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                ^BDR2:18: error: not found: value backdraw
    case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                            ^BDR2:18: error: not found: value backdraw
    case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                        ^BDR2:18: error: not found: value backdraw
    case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                    ^BDR2:18: error: not found: value backdraw
    case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                            ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                        ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                    ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                ^BDR2:19: error: not found: value backdraw
    case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
                                                                            ^