bdr.BDR2.scala.code
var fini=false
while (fini==false){
  var lecture=readMessage()
  lecture match {
  	case "R" => right(); forward()
  	case "L" => left(); forward()
  	case "I" => right(); right(); forward()
  	case "A" => forward()
  	case "B" => forward(); forward()
  	case "C" => forward(); forward(); forward()
  	case "D" => forward(); forward(); forward(); forward()
  	case "E" => forward(); forward(); forward(); forward(); forward()
  	case "F" => forward(); forward(); forward(); forward(); forward(); forward()
  	case "Z" => backdraw()
  	case "Y" => backdraw(); backdraw()
  	case "X" => backdraw(); backdraw(); backdraw()
  	case "W" => backdraw(); backdraw(); backdraw(); backdraw()
  	case "V" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
  	case "U" => backdraw(); backdraw(); backdraw(); backdraw(); backdraw(); backdraw()
    case _ => fini=true
  }
}